# meteoanalytics

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
open_data_client/: README.md  pyproject.toml
open_data_client/aemet_open_data_client/: __init__.py
open_data_client/aemet_open_data_client/api/antartida/: datos_ant_á_rtida.py  datos_antartida.py
open_data_client/aemet_open_data_client/api/avisos_cap/: avisos_de_fen_ó_menos_meteorol_ó_gicos_adversos_archivo.py  avisos_de_fen_ó_menos_meteorol_ó_gicos_adversos_ú_ltimo.py
open_data_client/aemet_open_data_client/api/indices_incendios/: mapa_de_niveles_de_riesgo_estimado_meteorol_ó_gico_de_incendios_forestales.py  mapa_de_niveles_de_riesgo_previsto_meteorol_ó_gico_de_incendios_forestales.py
open_data_client/aemet_open_data_client/api/informacion_satelite/: temperatura_del_agua_del_mar.py  í_ndice_normalizado_de_vegetaci_ó_n.py
open_data_client/aemet_open_data_client/api/maestro/: get_municipio_using_get.py  get_municipios_using_get.py
open_data_client/aemet_open_data_client/api/mapas_y_graficos/: mapas_de_an_á_lisis_ú_ltima_pasada.py  mapas_significativos_tiempo_actual.py
open_data_client/aemet_open_data_client/api/observacion_convencional/: datos_de_observaci_ó_n_tiempo_actual.py  datos_de_observaci_ó_n_tiempo_actual_1.py  mensajes_de_observaci_ó_n_ú_ltimo_elaborado.py
open_data_client/aemet_open_data_client/api/prediccion_maritima/: predicci_ó_n_mar_í_tima_costera.py  predicci_ó_n_mar_í_tima_de_alta_mar.py
open_data_client/aemet_open_data_client/api/predicciones_especificas/: informacion_nivologica.py  predicci_ó_n_de_monta_ñ_a_tiempo_actual.py  predicci_ó_n_de_monta_ñ_a_tiempo_pasado.py  predicci_ó_n_de_radiaci_ó_n_ultravioleta_uvi.py  (+3 more)
open_data_client/aemet_open_data_client/models/: __init__.py  field_200.py  field_401.py  field_404.py  field_429.py
(+78 files in other folders)
